# ai-tutor-system

./: .bandit  .checkov.yml  .env.example  .gitattributes  .gitignore  .kiro-rules  .pre-commit-config.yaml  .truffleHogConfig.yml  FINAL_UNIT_TEST_SUMMARY.md  KIRO_CONTEXT_TRANSFER.md  LOCALSTACK_SETUP_COMPLETE.md  Makefile  PUBLIC_DOMAINS_IMPLEMENTATION.md  README.md  REFACTORING_COMPLETE.md  ROTATION_POLICY_SUMMARY.md  S3.template  SECURITY.md  System_admin.md  TEST_REFACTORING_SUMMARY.md  UNIT_TESTS_ADDED.md  UNIT_TEST_COVERAGE_REPORT.md  UNIT_TEST_REFACTORING.md  WEEK2_TESTS_COMPLETE.md  aws_debug  batch_upload_bug.md  buildspec.yml  cdk.context.json  cdk.json  commit_public_domains.sh  commit_term_merge.sh  dev_chat.json  docker-compose.localstack.yml  frontend-buildspec.yml  localstack.yml  migration_validation_results.md  package-lock.json  package.json  pull_multistack.sh  pyproject.toml  (+7 more)
.gitea/workflows/: gitea-ci.yml
.github/: SETUP.md
.github/workflows/: ci-cd.yml  ci-cd.yml.old  deploy.yml  gitea-ci.yml  github-ci-cd.yml  rollback.yml  security.yml
.kiro/agents/: builder.json  lead.json  scout.json  tester.json
.kiro/hooks/: spec-execution-lead.kiro.hook  spec-lead-coordinator.kiro.hook
artifacts/: component_library.html  sitemap.html  user_flow_onboarding.html  wireframe_dashboard.html  wireframe_quiz_interface.html
docs/: CI_CD_SCHEMA_MIGRATIONS.md  DB_PROXY_VERIFICATION.md  LOCALSTACK.md  model-build.md
final_similarity_model/: README.md  config.json  model.safetensors  separation.md
final_similarity_model_onnx/: config_sentence_transformers.json  model.onnx
frontend/: .env.example  MOCK_AUTH_SETUP.md  build-for-aws.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-app/: package-lock.json  package.json
infrastructure/: README.md  app.py  app.py.deprecated  app_auth_only.py  app_multistack.py  cdk.context.json  requirements.txt
scripts/: activate_local_env.sh  apply_public_domains_migration.py  apply_schema.py  build_ml_container.sh  build_ml_layer.sh  cleanup_localstack.py  cleanup_test_users.py  convert_py_methods.py  create_lambda_layer.py  deploy.py  deploy_environment_aware_auth.py  deploy_real_lambdas.py  deploy_to_aws.py  localstack_setup.py  migrate_quiz_schema.py  rollback_deployment.py  run_property_tests.py  security_scan.py  setup_cognito.py  setup_environment.py  setup_local_database.py  setup_mock_api.py  setup_mock_auth.py  setup_monitoring.py  setup_rds_localstack.py  setup_real_cognito.py  setup_secrets_management.py  setup_security_monitoring.py  test_answer_evaluator_lambda.py  test_cognito_emails.py  test_deployment.py  test_quiz_api_gateway.py  test_quiz_engine_lambda.py  test_sample_data.py  verify_localstack.py  verify_schema.py
tests/: conftest.py  test_answer_evaluation_properties.py  test_answer_evaluation_unit.py  test_api_endpoints_integration.py  test_api_integration.py  test_api_security.py  test_auth_properties.py  test_auth_security.py  test_auth_unit.py  test_auth_utils_unit.py  test_authorization_utils_unit.py  test_batch_upload_properties.py  test_batch_upload_unit.py  test_cognito_auth_properties.py  test_cognito_integration.py  test_config_unit.py  test_database_schema_properties.py  test_db_proxy_unit.py  test_deployment_validation.py  test_domain_properties.py  test_domain_unit.py  test_kms_secrets.py  test_localstack_integration.py  test_model_utils_unit.py  test_progress_properties.py  test_progress_unit.py  test_quiz_properties.py  test_quiz_unit.py  test_response_utils_unit.py  test_rotation_policy.py  test_secrets_client_unit.py  test_secrets_integration.py  test_security_controls.py  test_security_middleware_unit.py  test_security_monitoring.py  test_setup.py  test_user_profile_unit.py
(+177 files in other folders)
